--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -3,7 +3,6 @@
 // <=========================================================================================================> //
 
 @import "nullstyle";
-@import "normalize-antd";
 
 // <=========================================================================================================> //
 // --- Заготовки --- //
@@ -72,6 +71,7 @@ h4 {
 
 body {
   margin: 0;
+  min-height: 100%;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: 400;
