refactor: color scheme

--- a/src/widgets/Converter/style.scss
+++ b/src/widgets/Converter/style.scss
@@ -1,10 +1,10 @@
 .converter {
-  width: 1200px;
-  background: #d8dadd;
+  width: 900px;
+  background: #64FC8C;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 3px;
+  border-radius: 20px;
 
   &__wrapper {
     padding: 20px 50px;
