--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -80,3 +80,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: $dark;
 }
+
+.ant-select:not(.ant-select-customize-input) .ant-select-selector{
+  border: 1px solid #32BF58;
+  &:hover {
+    border-color: #168F30;
+  }
+}
+
+.ant-select-focused:not( .ant-select-disabled).ant-select:not( .ant-select-customize-input) .ant-select-selector{
+  border-color: #168F30;
+}
