--- a/src/features/currency-conversion/ui/style.scss
+++ b/src/features/currency-conversion/ui/style.scss
@@ -6,12 +6,17 @@
     display: flex;
     align-items: center;
     background: none;
+
+    svg{
+      fill: white;
+    }
+
     @media (any-hover: hover) {
       &:hover {
         background: none;
 
         svg {
-          fill: #40a9ff;
+          fill: #32BF58;
           transition: all .2s linear;
         }
       }
